After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708198 - crash in profile name compare (_g_utf8_normalize_wc)
crash in profile name compare (_g_utf8_normalize_wc)
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
3.9.x
Other Linux
: Normal critical
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-16 22:03 UTC by Christian Persch
Modified: 2013-12-06 21:36 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Persch 2013-09-16 22:03:33 UTC
https://retrace.fedoraproject.org/faf/problems/1211353/

Not sure if we pass invalid data (our code doesn't look like it does to me), or glib bug.

1 	_g_utf8_normalize_wc 	/usr/lib64/libglib-2.0.so.0 	/usr/src/debug/glib-2.36.3/glib/gunidecomp.c 	374
2 	g_utf8_collate 	/usr/lib64/libglib-2.0.so.0 	/usr/src/debug/glib-2.36.3/glib/gunicollate.c 	115
3 	terminal_profiles_compare 	/usr/libexec/gnome-terminal-server 	/terminal-profiles-list.c 	261
4 	g_list_sort_real 	/usr/lib64/libglib-2.0.so.0 	/usr/src/debug/glib-2.36.3/glib/glist.c 	1068
5 	g_list_sort_real 	/usr/lib64/libglib-2.0.so.0 	/usr/src/debug/glib-2.36.3/glib/glist.c 	1064
6 	terminal_window_update_set_profile_menu 	/usr/libexec/gnome-terminal-server 	/terminal-window.c 	536
7 	terminal_window_init 	/usr/libexec/gnome-terminal-server 	/terminal-window.c 	1622
Comment 1 Igor Gnatenko 2013-09-20 09:23:52 UTC
how reproduce ?
Comment 2 Christian Persch 2013-12-02 16:57:27 UTC


Thread 1 (Thread 0x7f90fbb59a00 (LWP 8417))

  • #0 _g_utf8_normalize_wc
    at gunidecomp.c line 374
  • #1 g_utf8_collate
    at gunicollate.c line 114
  • #2 terminal_profiles_compare
    at terminal-profiles-list.c line 260
  • #3 g_list_sort_merge
    at glist.c line 1066
  • #4 g_list_sort_real
    at glist.c line 1112
  • #5 g_list_sort_real
    at glist.c line 1112
  • #6 g_list_sort
    at glist.c line 1149
  • #7 terminal_profiles_list_ref_children
    at terminal-profiles-list.c line 110

Comment 3 Christian Persch 2013-12-06 21:36:05 UTC
Fixed on master and 3-10.
Comment 4 Christian Persch 2013-12-06 21:36:16 UTC
Fixed on master and 3-10.